update swagger server
